# taskplan

./: .gitignore  CHANGELOG.md  README.md  README_de.md  UMBAU-KONZEPT.md  ellmos-module.v2.json  pyproject.toml  taskplan.example.toml
.github/workflows/: tests.yml
taskplan/: __init__.py  __main__.py  api.py  client.py  config.py  discovery.py  doctor.py  locks.py  markers.py  registry.py  runner.py  runtime.py  selector.py  traversal.py  workflows.py
taskplan/prompts/: MAINTAINER.txt  TASKSOLVER.txt  TASKWRITER.txt  __init__.py
taskplan/prompts/de/: TASKWRITER.txt
taskplan/prompts/en/: MAINTAINER.txt  TASKSOLVER.txt  TASKWRITER.txt
tests/: test_config_sections.py  test_discovery.py  test_languages.py  test_locks.py  test_markers.py  test_prompt_contracts.py  test_registry.py  test_repository_hygiene.py  test_runtime.py  test_schema_v2.py  test_selector.py  test_taskplan.py  test_traversal.py
